[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/ExtensionClass/LodModel.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.0196078, 0.647059, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.772549, 0, 0, 1 )

[node name="LodModel" type="Area"]
script = ExtResource( 1 )

[node name="LOD0" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="LOD0"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="LOD1" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="LOD1"]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="LOD2" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="LOD2"]
mesh = SubResource( 1 )
material/0 = SubResource( 4 )
